ingress_simplest_query.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2021-11-24T12:20:03Z"
  generation: 2
  labels:
    app: jaeger
    app.kubernetes.io/component: query-ingress
    app.kubernetes.io/instance: simplest
    app.kubernetes.io/managed-by: jaeger-operator
    app.kubernetes.io/name: simplest-query
    app.kubernetes.io/part-of: jaeger
  name: simplest-query
  namespace: observability
  ownerReferences:
  - apiVersion: jaegertracing.io/v1
    controller: true
    kind: Jaeger
    name: simplest
    uid: b8e5dd2b-5c66-4d9e-bea7-c762c786090d
  resourceVersion: "101037"
  uid: cbfc1f81-354c-4c87-a7ae-91c85885b730
spec:
  defaultBackend:
    service:
      name: simplest-query
      port:
        number: 16686
status:
  loadBalancer: {}
